--- a/_sass/_reset.scss
+++ b/_sass/_reset.scss
@@ -1,5 +1,5 @@
 *, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; }
-html { scroll-behavior: smooth; }
+html { scroll-behavior: smooth; overflow-x: hidden; }
 body {
   font-family: var(--font); font-size: 1.0625rem; line-height: 1.65;
   color: var(--gray-600); background: var(--white);
